--- a/index.html
+++ b/index.html
@@ -281,25 +281,6 @@
 }
 
 @media (max-width: 968px) and (orientation: landscape) {
-    button[onclick="generateRandomName()"] {
-        padding: 8px 12px !important;
-        font-size: 0.8em !important;
-        min-width: 70px !important;
-        max-width: 90px !important;
-        white-space: nowrap !important;
-    }
-}
-
-@media (max-width: 768px) and (orientation: landscape) {
-    button[onclick="generateRandomName()"] {
-        padding: 6px 10px !important;
-        font-size: 0.75em !important;
-        min-width: 60px !important;
-        max-width: 80px !important;
-    }
-}
-
-@media (max-width: 968px) and (orientation: landscape) {
     .name-input-group {
         display: flex;
         gap: 8px;
@@ -384,9 +365,9 @@
                     <h2 class="section-title">Basic Information</h2>
                     <div class="form-group">
                         <label>Character Name</label>
-                       <div class="name-input-group" style="display: flex; gap: 10px;">
-    <input type="text" id="charName" placeholder="Enter name or leave blank for auto-generation" style="flex: 1;">
-    <button onclick="generateRandomName()" style="padding: 12px 20px; background: linear-gradient(45deg, #ff9ff3, #feca57); color: #1a1a2e; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; white-space: nowrap;">🎲 Random Name</button>
+                       <div class="name-input-group" style="display: flex; gap: 8px;">
+    <input type="text" id="charName" placeholder="Enter name or leave blank" style="flex: 2;">
+    <button onclick="generateRandomName()" style="padding: 12px 15px; background: linear-gradient(45deg, #ff9ff3, #feca57); color: #1a1a2e; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; white-space: nowrap; flex-shrink: 0;">🎲 Random Name</button>
 </div>
                     </div>
                     <div class="form-group">
