--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                     <div class="form-group">
                         <label>Character Name</label>
                        <div class="name-input-group" style="display: flex; gap: 8px;">
-    <input type="text" id="charName" placeholder="Enter name or leave blank" style="flex: 3;">
-    <button onclick="generateRandomName()" style="padding: 12px 15px; background: linear-gradient(45deg, #ff9ff3, #feca57); color: #1a1a2e; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; white-space: nowrap; flex-shrink: 0;">🎲 Randomize Name</button>
+    <input type="text" id="charName" placeholder="Enter name or leave blank" style="flex: 2;">
+    <button onclick="generateRandomName()" style="padding: 12px 15px; background: linear-gradient(45deg, #ff9ff3, #feca57); color: #1a1a2e; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; white-space: nowrap; flex-shrink: 0;">🎲 Name</button>
 </div>
                     </div>
                     <div class="form-group">
